deployments/k8s/postgres-kind.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: goconnect
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 30432
  type: NodePort
