deployments/k8s/redis-kind.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: goconnect
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    nodePort: 30379
  type: NodePort
